# AlleGegenSchlaubi

./: AlleGegenSchlaubi.kdev4  CMakeLists.txt  Kompilierung.Linux  Kompilierung.MacOSX  Kompilierung.Windows  LIZENZ  README  frage.cpp  frage.h  fragebearbeiten.cpp  fragebearbeiten.h  fragebearbeiten.ui  fragenliste.cpp  fragenliste.h  hintergrund.xcf  icons.qrc  main.cpp  punkteab.cpp  punkteab.h  quizfenster.cpp  quizfenster.h  quizfenster.ui  quizknubbel.cpp  quizknubbel.h  steuerfenster.cpp  steuerfenster.h  steuerfenster.ui
icons/: README
